--- a/styles.css
+++ b/styles.css
@@ -19,11 +19,11 @@ a {
   display: flex;
   justify-content: space-between;
   background-color: #000;
-  font: 400 130px/0.8 'Great Vibes', Helvetica, sans-serif;
+  font-family: 'Parisienne', cursive;
   font-size: 35px;
 }
 .navbar-links ul {
-  margin-top: 5px;
+  margin-top: 0;
   padding: 0;
   display: flex;
 }
@@ -33,7 +33,7 @@ a {
 }
 .navbar-links li a {
   text-decoration: none;
-  padding: 10px 20px;
+  padding: 10px 16px;
   display: block;
   transition: all .5s;
 
@@ -56,7 +56,7 @@ a {
 .toggle-button .bar {
   height: 3px;
   width: 100%;
-  background-color: white;
+  background-color: #0499ff;
   border-radius: 10px;
 }
 
@@ -78,7 +78,7 @@ header {
   background: url('./img/landscape.jpg') no-repeat center center fixed;
   background-size: cover;
   text-align: center;
-  font: 400 130px/0.8 'Great Vibes', Helvetica, sans-serif;
+  font-family: 'Parisienne', cursive;
   color: #fff;
   text-shadow: 4px 4px 3px rgba(0,0,0,0.1); 
   color: #222;
@@ -141,7 +141,7 @@ ul.skills {
 }
 
 .sub-title {
-  font: 400 130px/0.8 'Great Vibes', Helvetica, sans-serif;
+  font-family: 'Parisienne', cursive;
   font-size: 60px;
 }
 
